<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cambiarcontra1"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cambiarcontra2"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cambiarcontra3"
        android:inputType="textPassword" />
</LinearLayout>
