<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="182dp"
        android:layout_height="127dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="134dp"
        android:src="@drawable/logoapp" />

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/Correoelectrónico"
        android:inputType="textEmailAddress"
        android:textAllCaps="false"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="377dp"
        android:layout_height="63dp"
        android:layout_below="@id/editTextEmail2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/alfa_slab_one"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="322dp"
        android:background="@drawable/boton_redon_entrar"
        android:backgroundTint="#4CAF50"
        android:drawableTint="#FEFFFF"
        android:fontFamily="@font/ghibotalk"
        android:onClick="iniciarSesion"
        android:text="@string/button_Entrar"
        android:textColor="#0A0C0A"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="184dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="263dp"
        android:text="@string/Olvidastecontra"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewForgotPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="-55dp"
        android:text="@string/Registrarse"
        android:textAlignment="center"
        android:textColor="#218C21"
        android:textSize="20sp" />

</RelativeLayout>
