<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JardinActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewBienvenido"
            android:layout_width="346dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:background="@color/fondoTexto"
            android:fontFamily="@font/ghibotalk"
            android:text="@string/welcomeJardin"
            android:textAlignment="center"
            android:textColor="#47CC4B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridLayoutMenu"
            android:layout_width="382dp"
            android:layout_height="633dp"
            android:layout_marginTop="32dp"
            android:columnCount="2"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewBienvenido">

            <androidx.cardview.widget.CardView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/tusplantas" />

                    <Button
                        android:id="@+id/buttonTuJardin"
                        android:layout_width="211dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/fondoTexto"
                        android:fontFamily="@font/ghibotalk"
                        android:text="@string/tusplantas"
                        android:textColor="#47CC4B"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:layout_width="337dp"
                android:layout_height="131dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="344dp"
                    android:layout_height="129dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="84dp"
                        android:layout_height="46dp"
                        android:src="@drawable/nuevaplanta" />

                    <Button
                        android:id="@+id/buttonAddPlant"
                        android:layout_width="264dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/fondoTexto"
                        android:fontFamily="@font/ghibotalk"
                        android:text="@string/anyadirplantas"
                        android:textAlignment="center"
                        android:textColor="#47CC4B"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="328dp"
                android:layout_height="129dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="49dp"
                        android:src="@drawable/marchito" />

                    <Button
                        android:id="@+id/buttonidentificararPlant"
                        android:layout_width="232dp"
                        android:layout_height="61dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/fondoTexto"
                        android:fontFamily="@font/ghibotalk"
                        android:text="@string/eliminarplantas"
                        android:textColor="#47CC4B"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="328dp"
                android:layout_height="129dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="48dp"
                        android:src="@drawable/buscarplantas" />

                    <Button
                        android:id="@+id/buttonidentificarPlant"
                        android:layout_width="246dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/fondoTexto"
                        android:fontFamily="@font/ghibotalk"
                        android:text="@string/identificarplantas"
                        android:textColor="#47CC4B"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>