<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewBienvenido"
            android:layout_width="346dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:background="@color/fondoTexto"
            android:fontFamily="@font/ghibotalk"
            android:text="@string/welcomeJardin"
            android:textAlignment="center"
            android:textColor="#47CC4B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/textViewBienvenido"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="66dp"
                            android:layout_height="48dp"
                            android:src="@drawable/planta" />

                        <Button
                            android:id="@+id/buttonTuplanta"
                            android:layout_width="246dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="@color/fondoTexto"
                            android:fontFamily="@font/ghibotalk"
                            android:text="@string/plantas"
                            android:textColor="#47CC4B"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="46dp"
                            android:src="@drawable/tips" />

                        <TextView
                            android:id="@+id/textViewConsejo"
                            android:layout_width="303dp"
                            android:layout_height="95dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/fondoTexto"
                            android:fontFamily="@font/ghibotalk"
                            android:text="@string/tips"
                            android:textAlignment="center"
                            android:textColor="#47CC4B"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/jardincito" />

                        <Button
                            android:id="@+id/buttonTuJardin"
                            android:layout_width="211dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="@color/fondoTexto"
                            android:fontFamily="@font/ghibotalk"
                            android:text="@string/tuJardin"
                            android:textColor="#47CC4B"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/plantacion" />

                        <Button
                            android:id="@+id/buttonGuiaPlantar"
                            android:layout_width="211dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="@color/fondoTexto"
                            android:fontFamily="@font/ghibotalk"
                            android:text="@string/guiaparaplantar"
                            android:textColor="#47CC4B"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/plagas" />

                        <Button
                            android:id="@+id/buttonPlagas"
                            android:layout_width="211dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:backgroundTint="@color/fondoTexto"
                            android:fontFamily="@font/ghibotalk"
                            android:text="@string/plagas2"
                            android:textColor="#47CC4B"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

        <!-- Barra de navegación inferior -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fuente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
